@@ -8,6 +8,7 @@
 #include "PocketItems.h"
 #include "Anm2Extras.h"
 #include "ExtraLives.h"
+#include "LaserExtras.h"
 
 #include "ASMPatches/ASMCallbacks.h"
 #include "ASMPatches/ASMDelirium.h"
@@ -146,6 +147,7 @@ void PerformASMPatches() {
 	PatchNullItemAndNullCostumeSupport();
 	ASMPatchesForGetCoinValue();
 	ASMPatchesForAddRemovePocketItemCallbacks();
+	ASMPatchesForLaserExtras();
 	HookImGui();
 
 	// Sprite
