@@ -1,0 +1,6 @@
+#pragma once
+
+#include "IsaacRepentance.h"
+
+void RecalculateLaserSamplesNextUpdate(Entity_Laser* laser);
+void ASMPatchesForLaserExtras();
